# hologram

./: .gitignore  .gitmodules  .holoarch.toml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  VERIFICATION.md  archon.yaml  cliff.toml  deny.toml  install.sh
crates/holo-archive/: Cargo.toml
crates/holo-archive/src/: lib.rs
crates/holo-async/: Cargo.toml
crates/holo-async/src/: compiler.rs  executor.rs  lib.rs  stream.rs
crates/holo-bench/: Cargo.toml
crates/holo-bench/benches/: archive.rs  async_exec.rs  async_stream.rs  compiler.rs  executor.rs  ffi.rs  fusion.rs  kv_dispatch.rs  lut.rs  lut_gemm.rs  q1.rs  view.rs
crates/holo-bench/src/: lib.rs
crates/holo-cli/: Cargo.toml
crates/holo-cli/src/: lib.rs
crates/holo-core/: Cargo.toml
crates/holo-core/src/: lib.rs
crates/holo-exec/: Cargo.toml
crates/holo-exec/src/: lib.rs
crates/holo-ffi/: Cargo.toml  cbindgen.toml
crates/hologram-archive/: Cargo.toml  README.md
crates/hologram-archive/src/: address.rs  certificate_codec.rs  compose.rs  constant_codec.rs  decoder.rs  error.rs  format.rs  kernel_codec.rs  lib.rs  loader.rs  schedule_codec.rs  warm_codec.rs  weight.rs  writer.rs
crates/hologram-archive/tests/: address.rs  app_manifest_v3.rs  blake3_quantum.rs  certificate.rs  codec_round_trip.rs  conformance.rs  footer.rs  model_address.rs  parser_hardening.rs  ports_and_extensions.rs  v3_shape_coverage.rs  weight_dedup.rs  wire_stability.rs
crates/hologram-async/: Cargo.toml
crates/hologram-async/src/: compiler.rs  executor.rs  lib.rs
crates/hologram-backend/: Cargo.toml  build.rs
crates/hologram-backend/examples/: fused_int_timing.rs  i8_m_scaling.rs  pool_floor_probe.rs  roofline.rs  wasm_matmul_timing.rs  wasm_threads_timing.rs
crates/hologram-backend/src/: backend.rs  cpu.rs  cpu_cast.rs  cuda.rs  error.rs  kernel_call.rs  lib.rs  metal.rs  prism_axes.rs  quant_tier.rs  tiered.rs  webgpu.rs  workspace.rs
crates/hologram-backend/tests/: add_rms_norm.rs  canonical_wgpu.rs  cast.rs  concurrent_walks.rs  conformance.rs  cpu_kernels.rs  decode_attention.rs  decode_attention_valid.rs  dequant_activation.rs  dtype_codec.rs  float_kernels.rs  flow_law.rs  fused_epilogue_dtype.rs  gather.rs  integration.rs  kernel_equivalence.rs  kv_cache_write.rs  lut.rs  parallel.rs  performance.rs  pinned_semantics.rs  prism_axes.rs  wgpu_smoke.rs  zero_cost.rs  zero_overhead.rs
crates/hologram-bench/: Cargo.toml  README.md
crates/hologram-bench/benches/: archive.rs  async_exec.rs  async_stream.rs  calculator.rs  cascade.rs  chain_builder.rs  compiler.rs  content_reuse.rs  decode_gemv.rs  decode_step.rs  dequant_activation.rs  epilogue_fusion.rs  executor.rs  ffi.rs  fusion.rs  kernel_perf.rs  kv_cache.rs  kv_dispatch.rs  lut.rs  lut_activation.rs  lut_gemm.rs  matmul.rs  preflight.rs  production.rs  q1.rs  softmax.rs  source_lowering.rs  term_parse.rs  tiered_executor.rs  view.rs  wgpu_resident.rs
crates/hologram-bench/examples/: decode_profile.rs  gemv_micro.rs  matmul_small_m.rs
crates/hologram-bench/src/: lib.rs
crates/hologram-cascade/: Cargo.toml
crates/hologram-cascade/src/: certificate.rs  dispatch_decl.rs  effect_decl.rs  engine.rs  lib.rs  liveness.rs  precision.rs  qedl.rs  stage.rs  tape_builder.rs
crates/hologram-cli/: Cargo.toml  README.md
crates/hologram-cli/examples/: pipeline.rs
crates/hologram-cli/src/: cmd.rs  lib.rs  main.rs
crates/hologram-compiler/: Cargo.toml  README.md
crates/hologram-compiler/src/: cache.rs  compiler.rs  error.rs  lib.rs  lower.rs  pipeline.rs  source.rs
crates/hologram-compiler/tests/: backward_emission.rs  compile_from_source.rs  end_to_end.rs  end_to_end_source_to_execute.rs  prism_module_integration.rs  source.rs  source_ir.rs
crates/hologram-compression/: Cargo.toml
crates/hologram-compression/specs/: SPRINT.md
crates/hologram-compression/src/: codec.rs  float_plane.rs  header.rs  lib.rs  permute.rs  pipeline.rs  ring_diff.rs  stratum.rs  torus_block.rs
crates/hologram-conformance/: Cargo.toml  README.md
crates/hologram-conformance/src/: catalog.rs  cc.rs  feature.rs  lib.rs  report.rs
crates/hologram-conformance/tests/: bdd.rs  cc_gate.rs  cs_gate.rs  fat_thin.rs  meta_gate.rs
crates/hologram-core/: Cargo.toml
crates/hologram-core/src/: lib.rs
crates/hologram-core/tests/: carry_conformance.rs  perf_contract.rs  q3_conformance.rs  ring_conformance.rs
crates/hologram-emulator/: Cargo.toml  README.md
crates/hologram-emulator-codemodule/: Cargo.toml
crates/hologram-emulator-codemodule/src/: lib.rs
crates/hologram-emulator/src/: codemodule.rs  emulator.rs  lib.rs
crates/hologram-exec/: Cargo.toml  README.md  build.rs
crates/hologram-exec/examples/: addressed_decode_timing.rs
crates/hologram-exec/src/: async_session.rs  buffer.rs  coherence.rs  dirty_bits.rs  error.rs  executor.rs  float_dispatch.rs  kernel_dispatch.rs  kv_cache.rs  kv_quant.rs  kv_wht.rs  lib.rs  patch_prune.rs  prism_route.rs  profile.rs  refinement.rs  runner.rs  session.rs  shape_resolve.rs  tape.rs  tape_builder.rs  warm.rs
crates/hologram-exec/tests/: autodiff.rs  canonical_conformance.rs  canonicalization.rs  cast.rs  chained_ops.rs  confinement.rs  conformance.rs  constants.rs  constrained_bench.rs  constrained_profile.rs  content_addressed.rs  decode_attention_e2e.rs  decode_attention_valid_e2e.rs  desugar.rs  elision.rs  float_conformance.rs  gather.rs  gemm_conformance.rs  hr_contract.rs  kv_cache_write.rs  lease.rs  op_categories.rs  paged_weights.rs  parallel_levels.rs  performance.rs  ports.rs  prism_route.rs  quantization.rs  quantize_conformance.rs  real_execution.rs  (+12 more)
crates/hologram-ffi/: Cargo.toml  README.md
crates/hologram-foundation/: Cargo.toml
crates/hologram-fused-component/: Cargo.toml
crates/hologram-graph/: Cargo.toml  README.md
crates/hologram-host/: Cargo.toml
crates/hologram-ir/: Cargo.toml
crates/hologram-net/: Cargo.toml  README.md
crates/hologram-ops/: Cargo.toml  README.md
crates/hologram-registry/: Cargo.toml
(+1241 files in other folders)
