[workspace]
resolver = "2"
members = [
    "crates/hologram-host",
    "crates/hologram-types",
    "crates/hologram-ops",
    "crates/hologram-graph",
    "crates/hologram-compiler",
    "crates/hologram-exec",
    "crates/hologram-backend",
    "crates/hologram-archive",
    "crates/hologram-cli",
    "crates/hologram-ffi",
    "crates/hologram-bench",
    "substrate/hologram-substrate-core",
    "substrate/hologram-realizations",
    "substrate/hologram-substrate-tck",
    "substrate/hologram-store-mem",
    "substrate/hologram-store-native",
    "substrate/hologram-net-http",
    "substrate/hologram-runtime",
    "substrate/hologram-runtime-wasmtime",
    "substrate/hologram-substrate-cli",
    "substrate/hologram-bare-hal",
    "substrate/hologram-store-bare",
    "substrate/hologram-net-libp2p",
]

# hologram-efi (UEFI boot binary) and hologram-store-opfs (wasm32 + web-sys browser store) are
# target-specific — excluded from the host workspace; built explicitly (boot test / Playwright test).
exclude = ["substrate/hologram-efi", "substrate/hologram-store-opfs"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["UOR Foundation"]

[workspace.dependencies]
hologram-host     = { path = "crates/hologram-host", default-features = false }
hologram-types    = { path = "crates/hologram-types", default-features = false }
hologram-ops      = { path = "crates/hologram-ops", default-features = false }
hologram-graph    = { path = "crates/hologram-graph", default-features = false }
hologram-compiler = { path = "crates/hologram-compiler", default-features = false }
hologram-exec     = { path = "crates/hologram-exec", default-features = false }
hologram-backend  = { path = "crates/hologram-backend", default-features = false }
hologram-archive  = { path = "crates/hologram-archive", default-features = false }

# Deployment substrate (container/storage/network) — see specs/docs/container-substrate-architecture.md
hologram-substrate-core = { path = "substrate/hologram-substrate-core", default-features = false }
hologram-realizations   = { path = "substrate/hologram-realizations", default-features = false }
hologram-substrate-tck  = { path = "substrate/hologram-substrate-tck", default-features = false }
hologram-store-mem      = { path = "substrate/hologram-store-mem", default-features = false }
hologram-store-native   = { path = "substrate/hologram-store-native" }
hologram-net-http       = { path = "substrate/hologram-net-http" }
hologram-runtime        = { path = "substrate/hologram-runtime", default-features = false }
hologram-runtime-wasmtime = { path = "substrate/hologram-runtime-wasmtime" }
hologram-bare-hal       = { path = "substrate/hologram-bare-hal", default-features = false }
hologram-store-bare     = { path = "substrate/hologram-store-bare", default-features = false }

async-trait        = "0.1"
spin               = { version = "0.9", default-features = false, features = ["spin_mutex"] }
redb               = "4"
# libp2p, by specific sub-crates rather than the umbrella crate. The `libp2p`
# meta-crate unconditionally locks its full optional dependency set
# (libp2p-dns / libp2p-mdns → hickory-proto), which `cargo audit` flags on a
# whole-lockfile scan even when those features are never compiled. We use only
# request-response + Kademlia DHT over TCP+Noise+Yamux, so we depend on exactly
# those sub-crates — the DNS/mDNS resolver (and its advisories) never enters the
# dependency graph.
libp2p-swarm            = { version = "0.47", features = ["tokio", "macros"] }
libp2p-core             = { version = "0.43" }
libp2p-tcp              = { version = "0.44", features = ["tokio"] }
libp2p-noise            = { version = "0.46" }
libp2p-yamux            = { version = "0.47" }
libp2p-request-response = { version = "0.29", features = ["cbor"] }
libp2p-identity         = { version = "0.2", features = ["ed25519", "rand"] }
libp2p-kad              = { version = "0.48" }
serde                   = { version = "1", features = ["derive"] }
futures            = "0.3"
wasmtime           = { version = "45", default-features = false, features = ["cranelift", "runtime"] }

uor-foundation     = "0.5.2"
uor-foundation-sdk = "0.5.2"
uor-prism          = "0.4"
uor-prism-tensor   = { version = "0.4", default-features = false }
uor-addr           = { version = "0.2.0", default-features = false }

rkyv        = { version = "0.8", features = ["tinyvec-1"] }
bytemuck    = { version = "1.14", features = ["derive"] }
smallvec    = "1.13"
tinyvec     = "1.6"
rayon       = "1.8"
parking_lot = "0.12"
thiserror   = { version = "2", default-features = false }
clap        = { version = "4", features = ["derive"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
wgpu        = "24"
pollster    = "0.4"
criterion   = { version = "0.5", features = ["html_reports"] }
libm        = "0.2"
memmap2     = "0.9"
tracing     = "0.1"
hashbrown   = "0.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
