[package]
name = "hologram"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Feature-gated facade for the Hologram workspace crates."

[workspace]
resolver = "2"
members = [
    "crates/hologram-host",
    "crates/hologram-types",
    "crates/hologram-ops",
    "crates/hologram-graph",
    "crates/hologram-compiler",
    "crates/hologram-exec",
    "crates/hologram-backend",
    "crates/hologram-archive",
    "crates/hologram-cli",
    "crates/hologram-ffi",
    "crates/hologram-bench",
    "substrate/hologram-substrate-core",
    "substrate/hologram-realizations",
    "substrate/hologram-substrate-tck",
    "substrate/hologram-store-mem",
    "substrate/hologram-store-native",
    "substrate/hologram-net-http",
    "substrate/hologram-runtime",
    "substrate/hologram-runtime-wasmtime",
    "substrate/hologram-substrate-cli",
    "substrate/hologram-bare-hal",
    "substrate/hologram-store-bare",
    "substrate/hologram-runtime-bare",
    "substrate/hologram-net-bare",
    "substrate/hologram-net-tcp",
]

# Adding the root facade makes this a non-virtual workspace; keep root-level
# cargo commands operating on the same package set as the previous virtual root.
default-members = [
    ".",
    "crates/hologram-host",
    "crates/hologram-types",
    "crates/hologram-ops",
    "crates/hologram-graph",
    "crates/hologram-compiler",
    "crates/hologram-exec",
    "crates/hologram-backend",
    "crates/hologram-archive",
    "crates/hologram-cli",
    "crates/hologram-ffi",
    "crates/hologram-bench",
    "substrate/hologram-substrate-core",
    "substrate/hologram-realizations",
    "substrate/hologram-substrate-tck",
    "substrate/hologram-store-mem",
    "substrate/hologram-store-native",
    "substrate/hologram-net-http",
    "substrate/hologram-runtime",
    "substrate/hologram-runtime-wasmtime",
    "substrate/hologram-substrate-cli",
    "substrate/hologram-bare-hal",
    "substrate/hologram-store-bare",
    "substrate/hologram-runtime-bare",
    "substrate/hologram-net-bare",
    "substrate/hologram-net-tcp",
]

# hologram-efi (UEFI boot binary) and hologram-store-opfs (wasm32 + web-sys browser store) are
# target-specific — excluded from the host workspace; built explicitly (boot test / Playwright test).
exclude = [
    "substrate/hologram-efi",
    "substrate/hologram-store-opfs",
    "sdk/typescript/native/native",
    "sdk/typescript/wasm/driver",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["UOR Foundation"]

[workspace.dependencies]
hologram-host     = { path = "crates/hologram-host", default-features = false }
hologram-types    = { path = "crates/hologram-types", default-features = false }
hologram-ops      = { path = "crates/hologram-ops", default-features = false }
hologram-graph    = { path = "crates/hologram-graph", default-features = false }
hologram-compiler = { path = "crates/hologram-compiler", default-features = false }
hologram-exec     = { path = "crates/hologram-exec", default-features = false }
hologram-backend  = { path = "crates/hologram-backend", default-features = false }
hologram-archive  = { path = "crates/hologram-archive", default-features = false }
hologram-cli      = { path = "crates/hologram-cli", default-features = false }
hologram-ffi      = { path = "crates/hologram-ffi", default-features = false }
hologram-bench    = { path = "crates/hologram-bench", default-features = false }

# Deployment substrate (container/storage/network) — see specs/docs/container-substrate-architecture.md
hologram-substrate-core = { path = "substrate/hologram-substrate-core", default-features = false }
hologram-realizations   = { path = "substrate/hologram-realizations", default-features = false }
hologram-substrate-tck  = { path = "substrate/hologram-substrate-tck", default-features = false }
hologram-store-mem      = { path = "substrate/hologram-store-mem", default-features = false }
hologram-store-native   = { path = "substrate/hologram-store-native" }
hologram-net-http       = { path = "substrate/hologram-net-http" }
hologram-runtime        = { path = "substrate/hologram-runtime", default-features = false }
hologram-runtime-wasmtime = { path = "substrate/hologram-runtime-wasmtime" }
hologram-bare-hal       = { path = "substrate/hologram-bare-hal", default-features = false }
hologram-store-bare     = { path = "substrate/hologram-store-bare", default-features = false }
hologram-runtime-bare   = { path = "substrate/hologram-runtime-bare", default-features = false }
hologram-net-bare       = { path = "substrate/hologram-net-bare", default-features = false }
hologram-net-tcp        = { path = "substrate/hologram-net-tcp" }

async-trait        = "0.1"
spin               = { version = "0.9", default-features = false, features = ["spin_mutex"] }
redb               = "4"
# libp2p was removed from the substrate's transport graph. Its PeerId + Multiaddr layer is a
# second, non-κ naming surface (SPINE-1 violation) — we replaced it with a pure-κ TCP
# transport: `hologram-net-tcp` (κ-XOR Kademlia, peers identified by `address_bytes(PeerEndpoint)`,
# verify-on-receipt at every hop). See architecture §11.1.
serde                   = { version = "1", features = ["derive"] }
futures            = "0.3"
wasmtime           = { version = "45", default-features = false, features = ["cranelift", "runtime"] }

uor-foundation     = "0.5.2"
uor-foundation-sdk = "0.5.2"
uor-prism          = "0.4"
uor-prism-tensor   = { version = "0.4", default-features = false }
uor-addr           = { version = "0.2.0", default-features = false }

rkyv        = { version = "0.8", features = ["tinyvec-1"] }
bytemuck    = { version = "1.14", features = ["derive"] }
smallvec    = "1.13"
tinyvec     = "1.6"
rayon       = "1.8"
parking_lot = "0.12"
thiserror   = { version = "2", default-features = false }
clap        = { version = "4", features = ["derive"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
wgpu        = "24"
pollster    = "0.4"
criterion   = { version = "0.5", features = ["html_reports"] }
libm        = "0.2"
memmap2     = "0.9"
tracing     = "0.1"
hashbrown   = "0.15"
nom         = { version = "8.0.0", default-features = false, features = ["alloc"] }
proc-macro2 = { version = "1", default-features = false, features = ["span-locations"] }
rustpython-parser = { version = "0.4.0", default-features = false, features = ["location", "malachite-bigint"] }
syn = { version = "2", default-features = false, features = ["clone-impls", "full", "parsing", "printing"] }
swc_common        = "23.0.0"
swc_ecma_ast      = "25.0.0"
swc_ecma_parser   = "41.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[features]
default = ["std"]
std = [
    "hologram-archive?/std",
    "hologram-backend?/std",
    "hologram-compiler?/std",
    "hologram-exec?/std",
    "hologram-host?/std",
]
full = [
    "archive",
    "backend",
    "bench",
    "cli",
    "compiler",
    "exec",
    "ffi",
    "graph",
    "host",
    "ops",
    "types",
]

archive = ["dep:hologram-archive"]
backend = ["dep:hologram-backend", "hologram-backend/cpu"]
bench = ["dep:hologram-bench"]
cli = ["dep:hologram-cli"]
compiler = ["dep:hologram-compiler"]
exec = ["dep:hologram-exec"]
ffi = ["dep:hologram-ffi"]
graph = ["dep:hologram-graph"]
host = ["dep:hologram-host"]
ops = ["dep:hologram-ops"]
types = ["dep:hologram-types"]

archive-compression = ["archive", "hologram-archive/compression"]
archive-model-formats = ["archive", "hologram-archive/model-formats"]
backend-cpu = ["backend", "hologram-backend/cpu"]
backend-metal = ["backend", "hologram-backend/metal"]
backend-parallel = ["backend", "hologram-backend/parallel"]
backend-wgpu = ["backend", "hologram-backend/wgpu"]
bench-parallel = ["bench", "hologram-bench/parallel"]
exec-parallel = ["exec", "hologram-exec/parallel"]
exec-tiered = ["exec", "hologram-exec/tiered-exec"]
ffi-wasm = ["ffi", "hologram-ffi/wasm"]
frontend-python = ["compiler", "hologram-compiler/frontend-python"]
frontend-rust = ["compiler", "hologram-compiler/frontend-rust"]
frontend-typescript = ["compiler", "hologram-compiler/frontend-typescript"]

[dependencies]
hologram-archive = { workspace = true, optional = true }
hologram-backend = { workspace = true, optional = true }
hologram-bench = { workspace = true, optional = true }
hologram-cli = { workspace = true, optional = true }
hologram-compiler = { workspace = true, optional = true }
hologram-exec = { workspace = true, optional = true }
hologram-ffi = { workspace = true, optional = true }
hologram-graph = { workspace = true, optional = true }
hologram-host = { workspace = true, optional = true }
hologram-ops = { workspace = true, optional = true }
hologram-types = { workspace = true, optional = true }
