[package]
# Published as `uor-hologram` (the crates.io name `hologram` is taken by an unrelated
# RBF-interpolation lib; see specs/refactor/P0-PREP.md §3). The `[lib] name = "hologram"`
# below preserves the one-word import path — user code still reads `use hologram::...`.
name = "uor-hologram"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Feature-gated facade for the Hologram workspace crates (published as `uor-hologram`; import as `hologram`)."

[lib]
name = "hologram"
path = "src/lib.rs"

[workspace]
resolver = "2"
members = [
    "crates/hologram-types",
    "crates/hologram-ops",
    "crates/hologram-graph",
    "crates/hologram-compiler",
    "crates/hologram-exec",
    "crates/hologram-compute",
    "crates/hologram-archive",
    "crates/hologram-cli",
    "crates/hologram-ffi",
    "crates/hologram-bench",
    "crates/hologram-conformance",
    "crates/hologram-space",
    "crates/hologram-tck",
    "crates/hologram-net",
    "crates/hologram-store",
    "crates/hologram-runtime",
    "crates/hologram-emulator",
    "spaces/holospaces",
    "spaces/holospaces-node",
]

# Adding the root facade makes this a non-virtual workspace; root-level cargo commands operate on
# this set. `spaces/holospaces-node` is intentionally EXCLUDED here (it stays in `members`, so
# `--workspace` still builds/tests it) — that leaves `hologram` (from `hologram-cli`) as the ONLY
# binary in the default set, so a bare `cargo run` at the root unambiguously runs the `hologram`
# CLI without needing `--bin hologram`. (`holospaces-node` is still runnable via `-p holospaces-node`.)
default-members = [
    ".",
    "crates/hologram-types",
    "crates/hologram-ops",
    "crates/hologram-graph",
    "crates/hologram-compiler",
    "crates/hologram-exec",
    "crates/hologram-compute",
    "crates/hologram-archive",
    "crates/hologram-cli",
    "crates/hologram-ffi",
    "crates/hologram-bench",
    "crates/hologram-space",
    "crates/hologram-tck",
    "crates/hologram-net",
    "crates/hologram-store",
    "crates/hologram-runtime",
    "crates/hologram-emulator",
    "spaces/holospaces",
]

# hologram-efi (UEFI boot binary) is target-specific — excluded from the host workspace; built
# explicitly (boot test). holospaces-browser (wasm32 + web-sys browser peer) is likewise
# target-specific. The former hologram-store-opfs (wasm32 browser store) is now hologram-store's
# `opfs`/`js-api` features, and hologram-emulator-codemodule (wasm32 container) is
# hologram-emulator's `codemodule` feature — both built as cdylibs via their scripts, no longer
# separate crates.
exclude = [
    "crates/hologram-efi",
    "spaces/holospaces-browser",
    "sdk/typescript/native/native",
    "sdk/typescript/wasm/driver",
    # Out-of-tree cargo-fuzz targets (nightly + libfuzzer; run explicitly, spec 03 §Parser hardening).
    "crates/hologram-space/fuzz",
    # The κ-Distribution protocol standard (spec 003) — incubating as its own workspace so it never
    # perturbs the release; built + tested by the non-blocking `kd-conformance` job (plan Phase 3/8).
    "crates/uor-distribution",
    # hologram's κ-Distribution registry service (Levels 3-5) — the leaf crate that consumes the
    # unpublished `uor-distribution` standard; excluded (own workspace, publish=false) so it stays out
    # of the release + blocking jobs, built by the non-blocking `kd-conformance` job (plan Phase 5/8).
    "crates/hologram-registry",
]

[workspace.package]
version = "0.12.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["UOR Foundation"]
repository = "https://github.com/Hologram-Technologies/hologram"

[workspace.dependencies]
hologram-types    = { path = "crates/hologram-types", default-features = false }
hologram-ops      = { path = "crates/hologram-ops", default-features = false }
hologram-graph    = { path = "crates/hologram-graph", default-features = false }
hologram-compiler = { path = "crates/hologram-compiler", default-features = false }
hologram-exec     = { path = "crates/hologram-exec", default-features = false }
hologram-compute  = { path = "crates/hologram-compute", default-features = false }
hologram-archive  = { path = "crates/hologram-archive", default-features = false }
hologram-cli      = { path = "crates/hologram-cli", default-features = false }
hologram-ffi      = { path = "crates/hologram-ffi", default-features = false }
hologram-bench    = { path = "crates/hologram-bench", default-features = false }
hologram-space    = { path = "crates/hologram-space", default-features = false }

# Deployment substrate (container/storage/network) — see specs/docs/container-substrate-architecture.md
hologram-tck            = { path = "crates/hologram-tck", default-features = false }
hologram-net            = { path = "crates/hologram-net", default-features = false }
hologram-store          = { path = "crates/hologram-store", default-features = false }
hologram-runtime        = { path = "crates/hologram-runtime", default-features = false }
hologram-emulator       = { path = "crates/hologram-emulator", default-features = false }

async-trait        = "0.1"
spin               = { version = "0.9", default-features = false, features = ["spin_mutex"] }
redb               = "4"
# libp2p was removed from the substrate's transport graph. Its PeerId + Multiaddr layer is a
# second, non-κ naming surface (SPINE-1 violation) — we replaced it with a pure-κ TCP
# transport: `hologram-net-tcp` (κ-XOR Kademlia, peers identified by `address_bytes(PeerEndpoint)`,
# verify-on-receipt at every hop). See architecture §11.1.
serde                   = { version = "1", features = ["derive"] }
futures            = "0.3"
wasmtime           = { version = "45", default-features = false, features = ["cranelift", "runtime"] }

uor-foundation     = "0.5.2"
uor-foundation-sdk = "0.5.2"
uor-prism          = "0.4"
uor-prism-tensor   = { version = "0.4", default-features = false }
uor-addr           = { version = "0.2.0", default-features = false }

# Layer-assembler codecs for the holospaces space impls (OCI tar+gzip / tar+zstd);
# no_std + alloc so the portable peer core (wasm32 / bare-metal) links them.
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
ruzstd      = "0.7"
rkyv        = { version = "0.8", features = ["tinyvec-1"] }
bytemuck    = { version = "1.14", features = ["derive"] }
smallvec    = "1.13"
tinyvec     = "1.6"
rayon       = "1.8"
parking_lot = "0.12"
thiserror   = { version = "2", default-features = false }
clap        = { version = "4", features = ["derive"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
wgpu        = "24"
pollster    = "0.4"
criterion   = { version = "0.5", features = ["html_reports"] }
libm        = "0.2"
memmap2     = "0.9"
tracing     = "0.1"
hashbrown   = "0.15"
nom         = { version = "8.0.0", default-features = false, features = ["alloc"] }
proc-macro2 = { version = "1", default-features = false, features = ["span-locations"] }
syn = { version = "2", default-features = false, features = ["clone-impls", "full", "parsing", "printing"] }
swc_common        = "23.0.0"
swc_ecma_ast      = "25.0.0"
swc_ecma_parser   = "41.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[features]
default = ["std"]
std = [
    "hologram-archive?/std",
    "hologram-compute?/std",
    "hologram-compiler?/std",
    "hologram-exec?/std",
]
full = [
    "archive",
    "backend",
    "bench",
    "cli",
    "compiler",
    "exec",
    "ffi",
    "graph",
    "ops",
    "types",
]

archive = ["dep:hologram-archive"]
backend = ["dep:hologram-compute", "hologram-compute/cpu"]
bench = ["dep:hologram-bench"]
cli = ["dep:hologram-cli"]
compiler = ["dep:hologram-compiler"]
exec = ["dep:hologram-exec"]
ffi = ["dep:hologram-ffi"]
graph = ["dep:hologram-graph"]
ops = ["dep:hologram-ops"]
types = ["dep:hologram-types"]
space = ["dep:hologram-space"]

# `client` (D4) — the single programmatic surface `hologram::Client<S: Space>` that composes
# compile → provision → store/resolve/run over any space contract. The CLI, C ABI, and SDKs
# all wrap this one type (05-tooling.md §law-6). Pulls the space contract + the compute path.
client = ["space", "compiler", "graph", "exec", "backend", "archive", "dep:hologram-runtime", "dep:uor-prism"]

archive-compression = ["archive", "hologram-archive/compression"]
archive-model-formats = ["archive", "hologram-archive/model-formats"]
backend-cpu = ["backend", "hologram-compute/cpu"]
backend-metal = ["backend", "hologram-compute/metal"]
backend-parallel = ["backend", "hologram-compute/parallel"]
backend-wgpu = ["backend", "hologram-compute/wgpu"]
bench-parallel = ["bench", "hologram-bench/parallel"]
exec-parallel = ["exec", "hologram-exec/parallel"]
exec-tiered = ["exec", "hologram-exec/tiered-exec"]
ffi-wasm = ["ffi", "hologram-ffi/wasm"]
frontend-python = ["compiler", "hologram-compiler/frontend-python"]
frontend-rust = ["compiler", "hologram-compiler/frontend-rust"]
frontend-typescript = ["compiler", "hologram-compiler/frontend-typescript"]

[dependencies]
hologram-archive = { workspace = true, optional = true }
hologram-compute = { workspace = true, optional = true }
hologram-bench = { workspace = true, optional = true }
hologram-cli = { workspace = true, optional = true }
hologram-compiler = { workspace = true, optional = true }
hologram-exec = { workspace = true, optional = true }
hologram-ffi = { workspace = true, optional = true }
hologram-graph = { workspace = true, optional = true }
hologram-ops = { workspace = true, optional = true }
hologram-types = { workspace = true, optional = true }
hologram-space = { workspace = true, optional = true }
# `Client::open` composes a lifecycle `Session` over the space's `Space::Runtime`.
hologram-runtime = { workspace = true, optional = true }
# The Client facade composes the compiler/exec hot path over a space's KappaStore;
# `uor-prism` supplies the WittLevel vocabulary the compile entry point takes.
uor-prism = { workspace = true, optional = true }

[dev-dependencies]
# The `client` facade test builds a minimal Space (a mock-engine Runtime over a MemKappaStore
# + a null KappaSync seam) and drives compile → provision → run and open → boot → suspend.
pollster = { workspace = true }
async-trait = { workspace = true }
smallvec = { workspace = true }
hologram-runtime = { workspace = true, features = ["std"] }
