[package]
name = "holo-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async compilation and execution wrappers for hologram"

[dependencies]
holo-compiler = { workspace = true }
holo-exec = { workspace = true }
holo-graph = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
holo-archive = { workspace = true }
holo-core = { workspace = true }
