[package]
name = "holo-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Criterion benchmarks for hologram-greenfield"

[dependencies]
holo-core = { workspace = true }
holo-graph = { workspace = true }
holo-archive = { workspace = true }
holo-exec = { workspace = true }
rkyv = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lut"
harness = false

[[bench]]
name = "view"
harness = false
