[package]
name = "holo-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Criterion benchmarks for hologram-greenfield"

[dependencies]
holo-core = { workspace = true }
holo-graph = { workspace = true }
holo-archive = { workspace = true }
holo-exec = { workspace = true }
holo-compiler = { workspace = true }
holo-async = { workspace = true }
holo-ffi = { workspace = true }
rkyv = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lut"
harness = false

[[bench]]
name = "view"
harness = false

[[bench]]
name = "kv_dispatch"
harness = false

[[bench]]
name = "executor"
harness = false

[[bench]]
name = "archive"
harness = false

[[bench]]
name = "fusion"
harness = false

[[bench]]
name = "q1"
harness = false

[[bench]]
name = "lut_gemm"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "ffi"
harness = false

[[bench]]
name = "async_exec"
harness = false

[[bench]]
name = "async_stream"
harness = false
