[package]
name = "holo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async CLI with subcommands for hologram operations"

[dependencies]
holo-core = { workspace = true }
holo-graph = { workspace = true }
holo-archive = { workspace = true }
holo-exec = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
