[package]
name = "holo-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KV-lookup execution engine with parallel level scheduling"

[dependencies]
holo-core = { workspace = true }
holo-graph = { workspace = true }
holo-archive = { workspace = true }
rkyv = { workspace = true }
bytemuck = { workspace = true }

[dependencies.rayon]
workspace = true
optional = true

[features]
default = ["std"]
std = ["holo-archive/std"]
parallel = ["rayon"]
