[package]
name = "hologram-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram .holo archive format (kernel calls + certificates + weights + schedule)."

[dependencies]
hologram-graph    = { workspace = true }
hologram-backend  = { workspace = true }
hologram-host     = { workspace = true }
uor-foundation    = { workspace = true }
blake3            = { workspace = true }
bytemuck          = { workspace = true }
thiserror         = { workspace = true }
memmap2           = { workspace = true, optional = true }

[dev-dependencies]
hologram-backend = { workspace = true }

[features]
default = ["std"]
std = ["dep:memmap2", "blake3/std"]
compression = []
