[package]
name = "hologram-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram .holo archive format (kernel calls + certificates + weights + schedule)."

[dependencies]
# Archive footer + weight fingerprints route through prism's
# canonical Blake3 HashAxis impl (via hologram-host's `HologramHasher`)
# rather than calling `blake3::hash` directly. Per wiki ADR-031
# hologram consumes its content-addressing primitive from
# prism-crypto; the archive layer holds no direct blake3 dependency.
hologram-graph    = { workspace = true }
hologram-backend  = { workspace = true }
hologram-host     = { workspace = true }
uor-prism         = { workspace = true }
# Direct deps so the public prism SDK macros (`output_shape!`, `verb!`,
# `prism_model!`) — used by `compose.rs` to realize the ordered BLAKE3
# composition operator — resolve `uor_foundation*` at the crate root.
uor-foundation     = { workspace = true }
uor-foundation-sdk = { workspace = true }
# UOR-ADDR (ADR-031 Layer-3 Prism realization): hologram's content
# identities are σ-projection-grounded, replayable κ-labels composed via
# the E₈ categorical operations (ADR-061), not bare hashes. `alloc`
# enables the ring realization + composition surface.
uor-addr          = { workspace = true, features = ["alloc"] }
hashbrown         = { workspace = true }
smallvec          = { workspace = true }
bytemuck          = { workspace = true }
thiserror         = { workspace = true, default-features = false }
memmap2           = { workspace = true, optional = true }

[dev-dependencies]
hologram-backend = { workspace = true }
# V&V ONLY — the upstream BLAKE3 reference implementation (by the
# algorithm's authors) used as an INDEPENDENT external oracle to verify
# hologram's σ-axis against, mirroring prism-btc validating SHA against
# FIPS-180-4 / rust-bitcoin. Never a runtime dependency (see above).
blake3 = "1"

[features]
default = ["std"]
std = [
    "dep:memmap2",
    "uor-addr/std",
    "hologram-host/std",
    "hologram-backend/std",
]
# Model-format addressing for hologram-ai: the gguf / onnx uor-addr
# realizations (each pulls `uor-prism-tensor`).
model-formats = ["uor-addr/gguf", "uor-addr/onnx"]
compression = []
