[package]
name = "hologram-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async compilation and execution wrappers for hologram"

[dependencies]
hologram-compiler = { workspace = true }
hologram-exec = { workspace = true }
hologram-graph = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
hologram-archive = { workspace = true }
hologram-core = { workspace = true }
