[package]
name = "hologram-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async compilation and execution wrappers for hologram"

[dependencies]
hologram-archive = { workspace = true }
hologram-compiler = { workspace = true }
hologram-fused-component = { workspace = true }
hologram-ir = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
hologram-core = { workspace = true }
