[package]
name = "hologram-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram per-target dispatch (CPU / Metal / wgpu)."

[dependencies]
hologram-host      = { workspace = true }
hologram-types     = { workspace = true }
hologram-ops       = { workspace = true }
uor-foundation     = { workspace = true }
uor-foundation-sdk = { workspace = true }
uor-prism          = { workspace = true }
# `#[macro_export]` macros emitted by `axis!` (e.g.
# `axis_extension_impl_for_tensor_axis!`) live at the declaring
# crate's root. Hologram references them through a direct dep on
# `uor-prism-tensor` so trait declarations and companion macros
# resolve through the same crate path.
uor-prism-tensor   = "0.1.3"
smallvec           = { workspace = true }
thiserror          = { workspace = true }
bytemuck           = { workspace = true }
tracing            = { workspace = true }
libm               = { workspace = true }
wgpu               = { workspace = true, optional = true }
pollster           = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc  = { version = "0.2", optional = true }

[features]
default = ["cpu"]
cpu = []
metal = ["dep:metal", "dep:objc"]
wgpu = ["dep:wgpu", "dep:pollster"]
