[package]
name = "hologram-backend"
version = "0.1.0"
edition = "2021"
description = "Device-native compute backends for hologram execution"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
hologram-core = { path = "../hologram-core" }
hologram-transform = { path = "../hologram-transform" }
smallvec = "1"
tracing = "0.1"
thiserror = "2"
bytemuck = "1"
pollster = { version = "0.4", optional = true }

# Metal backend (macOS / iOS) — linked automatically via build.rs
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
objc = "0.2"

[features]
default = []
# Metal backend — auto-detected on macOS/iOS, explicit for cross-compile
metal-backend = []
# WebGPU backend (browser + wgpu)
webgpu = ["dep:wgpu", "dep:pollster"]
# CUDA backend (NVIDIA GPU) — low priority
cuda = []

[dependencies.wgpu]
version = "24"
optional = true
