[package]
name = "hologram-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram per-target dispatch (CPU / Metal / wgpu)."

[dependencies]
hologram-host      = { workspace = true }
hologram-types     = { workspace = true }
hologram-ops       = { workspace = true }
uor-foundation     = { workspace = true }
uor-foundation-sdk = { workspace = true }
uor-prism          = { workspace = true }
# `#[macro_export]` macros emitted by `axis!` (e.g.
# `axis_extension_impl_for_tensor_axis!`) live at the declaring
# crate's root. Hologram references them through a direct dep on
# `uor-prism-tensor` so trait declarations and companion macros
# resolve through the same crate path.
uor-prism-tensor   = { workspace = true }
smallvec           = { workspace = true }
thiserror          = { workspace = true, default-features = false }
bytemuck           = { workspace = true }
libm               = { workspace = true }
wgpu               = { workspace = true, optional = true }
pollster           = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc  = { version = "0.2", optional = true }

[features]
# `no_std` + `alloc` by default; `std` (host default) adds std-only
# backends and the runtime-SIMD / thread-local-scratch amenities.
default = ["std", "cpu"]
std = ["thiserror/std", "hologram-host/std"]
cpu = []
# Multi-core execution: the cache-oblivious lattice recursion's disjoint
# sub-products are scheduled across an in-tree persistent worker pool
# (std threads, no external dependency). Host-only; the single-thread path
# is byte-identical and unchanged when off.
parallel = ["std"]
# The GPU backends are inherently host-only.
metal = ["std", "dep:metal", "dep:objc"]
wgpu = ["std", "dep:wgpu", "dep:pollster"]

# Standalone matmul timing harness (runs under wasmtime); needs std for
# `std::time::Instant`, so it is skipped on no_std / embedded CI builds.
[[example]]
name = "wasm_matmul_timing"
required-features = ["std", "cpu"]

# Fused int8 vs f32 matmul timing harness (the fused-int decode spike).
[[example]]
name = "fused_int_timing"
required-features = ["std", "cpu"]
