[package]
name = "hologram-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hologram criterion benchmarks."

[dependencies]
hologram-host     = { workspace = true }
hologram-types    = { workspace = true }
hologram-ops      = { workspace = true }
hologram-graph    = { workspace = true }
hologram-compiler = { workspace = true, features = ["std"] }
hologram-exec     = { workspace = true, features = ["std"] }
hologram-backend  = { workspace = true, features = ["std", "cpu"] }
hologram-archive  = { workspace = true, features = ["std"] }
uor-prism         = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
smallvec  = { workspace = true }

[[bench]]
name = "decode_step"
harness = false

[[bench]]
name = "content_reuse"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "production"
harness = false
